<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
   >

    <TextView
        android:textColor="@color/skyBlue"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Login_page_verification"
        android:textSize="30dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"

       android:layout_gravity="center"
        app:cardUseCompatPadding="true"
        android:layout_margin="3dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:layout_marginTop="40dp"
                android:id="@+id/loginPage_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_page_email"
                android:textSize="20dp"
                />

            <AutoCompleteTextView
                android:layout_marginTop="20dp"
                android:id="@+id/loginPage_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_page_password"
                android:textSize="20dp"
                />

            <Button
               android:textColor="@color/skyBlue"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page_login"
                android:background="@android:color/transparent"
                android:id="@+id/loginPage_logIn"
                android:layout_marginBottom="20dp"

/>        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:id="@+id/loginPage_progressBar"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="140dp"

        />
<Button
    android:background="@color/skyBlue"
    android:id="@+id/loginPage_create_new_account"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/lignGrey"
    android:text="@string/login_page_create_new_Account"
    android:layout_gravity="center|bottom"
    android:layout_marginBottom="30dp"/>
</FrameLayout>