<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

   <com.google.android.material.appbar.AppBarLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:ignore="MissingConstraints">
        <include layout="@layout/toolbar"
        android:id="@+id/homepage_toolbar"/>
       <com.google.android.material.tabs.TabLayout
           android:id="@+id/homePage_tabLayout"
           android:layout_width="match_parent"
           android:background="@color/skyBlue"
           android:layout_height="wrap_content">

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/home_page_Request" />

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/home_page_Chats" />

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/home_page_FRIENDS" />
       </com.google.android.material.tabs.TabLayout>
  <androidx.viewpager.widget.ViewPager
      android:id="@+id/HomePage_viewPager"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>
   </com.google.android.material.appbar.AppBarLayout>




</>